--- a/styles/filme-lista.css
+++ b/styles/filme-lista.css
@@ -24,3 +24,40 @@
     width: 100%;
     object-fit: cover;
 }
+
+.filme-list__container {
+    padding: var(--padding-s);
+    font-family: var(--fonte-texto);
+    flex-grow: 1;
+    display: flex;
+    gap: 42px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.filme-list__linha {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filme-çlist__descricao-dimensao, .filme-list__descricao-idade, .filme-list__descricao-idade-livre {
+    padding: var(--padding-xs) var(--padding-s);
+    border-radius: var(--padding-xs);
+}
+
+.filme-çlist__descricao-dimensao {
+    background-color: var(--cor-de-fundo-input);
+}
+.filme-list__descricao-idade {
+    background-color: var(--cor-faixa-etaria);
+}
+.filme-list__descricao-idade-livre {
+    background-color: var(--cor-faixa-etaria-livre);
+}
+
+.filme-list__descricao {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-xs);
+}
