--- a/styles/footer.css
+++ b/styles/footer.css
@@ -43,3 +43,30 @@
 .footer__column-list-redes-sociais {
     flex-direction: row;
 }
+
+@media screen and (max-width: 1200px) {
+    .footer {
+        padding: var(--padding-l);
+    }
+
+    .footer__column-logo {
+        flex-basis: 100%;
+        text-align: center;
+    }
+
+    .footer__column {
+        flex-basis: 30%;
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 730px) {
+    .footer__columns {
+        flex-direction: column;
+        padding: var(--padding-m) var(--padding-xs);
+    }
+
+    .footer__column-list-redes-sociais {
+        justify-content: center;
+    }
+}
